added a script for eval

--- a/evaluations/inference01.yaml
+++ b/evaluations/inference01.yaml
@@ -1,5 +1,5 @@
 $schema: https://azuremlschemas.azureedge.net/promptflow/latest/Run.schema.json
-flow: ../board-game-chat-eval/flow.dag.yaml
+flow: ../board-game-chat/flow.dag.yaml
 data: ./eval01.jsonl
 column_mapping:
   chat_history: ${data.chat_history}
