--- a/evaluations/inference01.yaml
+++ b/evaluations/inference01.yaml
@@ -1,6 +1,6 @@
 $schema: https://azuremlschemas.azureedge.net/promptflow/latest/Run.schema.json
 flow: ../board-game-chat/flow.dag.yaml
-data: ./eval01.jsonl
+data: ./questions.jsonl
 column_mapping:
   chat_history: ${data.chat_history}
   query: ${data.query}
